# DeepsSeek-in-Practice

./: .gitignore  README.md
Chapter03/: Chapter 3 prompt+response.md  eg1.py  eg2.py  eg3.py  eg3_results.jsonl  eg4.py  eg5.py  eg7.py  environment_setup.sh
Chapter03/01-brainstorming-ideation/: innovation_strategy_document.md
Chapter03/01-code-assistant/: legacy_trading_system.py  order_management_service.py  requirements.txt  risk_engine.py
Chapter03/02-document-understanding/: core_infrastructure.yml  lambda_authorizer.py  test_deepseek_parsing.py
Chapter04/: eg6.py  environment_setup.sh
Chapter05/: .envrc  01-initial-prototype.ipynb  02-api.Dockerfile  02-api.py  03-litellm.py  04-cpu-inference.py  05-api-cpu-xgrammar.py  06-llama-cpp-python.py  06-ollama.py  07-api-deepseek-sagemaker.py  08-litellm.py  README.md  chapter06.ipynb  pyproject.toml  utils.py
Chapter05/02-api/: 02-api.py
Chapter05/archive/: 03-robust-api-call.py  07-ollama.py
Chapter07/: standalone_synthetic_generation.py  standalone_training.py
WorkshopAgents/: 00 - welcome.ipynb  01 - deepseek-tool-calling-101.ipynb  README.md
ch-05/: 02-reasoning-model.py  09-langchain.py  10-instructor.py  11-api-service-summary.py  12-api-service-classification.py
chapter-5-building-with-deepseek/: 01-deepseek-api-call.py  04-features.py  05-providers.py  11-api-service-summary.py  README.md
chapter-6-agents-with-deepseek/: 01-evaluator-optimizer.ipynb  02-orchestrator-worker.ipynb  03-ReACT.ipynb  03-tool-calling-agent.ipynb  pyproject.toml
chapter-7-distillation/: run.py
(+22 files in other folders)
